--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -398,7 +398,7 @@
     <string name="lbl_purge_image_cache">Zwischenspeicher für Bilder löschen</string>
     <string name="lbl_rating">Bewertung</string>
     <string name="lbl_read">Gelesen</string>
-    <string name="lbl_read_and_unread">Gelesen und ungelesen</string>
+    <string name="lbl_group_read_and_unread">Gelesen und ungelesen</string>
     <string name="lbl_date_read_day">Tag</string>
     <string name="lbl_read_end">Datum Lesen beendet</string>
     <string name="lbl_date_read_month">Monat</string>
@@ -605,25 +605,10 @@
     <string name="size_x_small">X-Klein</string>
     <string name="statick">Statisch</string>
     <string name="strict">Strikte</string>
-    <string name="style_builtin_acquired_date">Datum erworben</string>
-    <string name="style_builtin_added_date">Erfassungsdatum</string>
     <string name="style_builtin_author_series">Autor, danach Serie</string>
     <string name="style_builtin_author_year">Autor und Jahr</string>
-    <string name="style_builtin_bookshelf">Bücherregal</string>
     <string name="style_builtin_compact">Kompakt</string>
-    <string name="style_builtin_book_title_1st_char">Buchtitel - 1. Buchstabe</string>
-    <string name="style_builtin_series_title_1st_char">Serientitel - 1. Buchstabe</string>
-    <string name="style_builtin_format">Buchformat</string>
-    <string name="style_builtin_genre">Genre</string>
-    <string name="style_builtin_language">Sprache</string>
-    <string name="style_builtin_lending">Verliehen</string>
-    <string name="style_builtin_location">Standort</string>
-    <string name="style_builtin_publication_date">Datum der Veröffentlichung</string>
-    <string name="style_builtin_rating">Bewertung</string>
-    <string name="style_builtin_read_and_unread">Gelesen und ungelesen</string>
-    <string name="style_builtin_read_date">Gelesen am</string>
-    <string name="style_builtin_series">Serie</string>
-    <string name="style_builtin_update_date">Änderungsdatum</string>
+    <string name="lbl_date_read">Gelesen am</string>
     <string name="style_is_builtin">Eingebaut</string>
     <string name="style_is_user_defined">Benutzerdefiniert</string>
     <string name="system">(System)</string>
@@ -710,4 +695,8 @@
     <string name="tip_import_isbn_list">Importieren Sie eine Textdatei mit ISBN-Nummern. Die Datei sollte in jeder Zeile eine einzige ISBN haben. Die Ergebnisse werden in die Warteschlange gestellt.</string>
     <string name="lbl_date_added">Erfassungsdatum</string>
 
+    <string name="lbl_group_1st_char_author_family_name">1. Zeichen des Familiennamens des Autors</string>
+    <string name="lbl_group_1st_char_series_title">1. Zeichen des Serientitels</string>
+    <string name="lbl_group_1st_char_publisher_name">1. Zeichen des Publisher-Namens</string>
+    <string name="lbl_group_1st_char_book_title">1. Zeichen des Buchtitels</string>
 </resources>
