--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -398,7 +398,7 @@
     <string name="lbl_purge_image_cache">Cancella cache immagini</string>
     <string name="lbl_rating">Valutazione</string>
     <string name="lbl_read">Letto</string>
-    <string name="lbl_read_and_unread">Letto &amp; Non letto</string>
+    <string name="lbl_group_read_and_unread">Letto &amp; Non letto</string>
     <string name="lbl_date_read_day">Leggi Giorno</string>
     <string name="lbl_read_end">Data fine lettura</string>
     <string name="lbl_date_read_month">Leggi Mese</string>
@@ -605,25 +605,10 @@
     <string name="size_x_small">X-Piccolo</string>
     <string name="statick">Statico</string>
     <string name="strict">Rigoroso</string>
-    <string name="style_builtin_acquired_date">Data di acquisizione</string>
-    <string name="style_builtin_added_date">Data di inserimento</string>
     <string name="style_builtin_author_series">Autore e Collana</string>
     <string name="style_builtin_author_year">Autore ed Anno</string>
-    <string name="style_builtin_bookshelf">Libreria</string>
     <string name="style_builtin_compact">Compatto</string>
-    <string name="style_builtin_book_title_1st_char">Titolo del libro - 1a lettera</string>
-    <string name="style_builtin_series_title_1st_char">Titolo della serie - 1a lettera</string>
-    <string name="style_builtin_format">Formato</string>
-    <string name="style_builtin_genre">Genere</string>
-    <string name="style_builtin_language">Lingua</string>
-    <string name="style_builtin_lending">Prestato</string>
-    <string name="style_builtin_location">Locazione</string>
-    <string name="style_builtin_publication_date">Data di pubblicazione</string>
-    <string name="style_builtin_rating">Valutazione</string>
-    <string name="style_builtin_read_and_unread">Letto e Non letto</string>
-    <string name="style_builtin_read_date">Lettura Data</string>
-    <string name="style_builtin_series">Collana</string>
-    <string name="style_builtin_update_date">Data aggiornamento</string>
+    <string name="lbl_date_read">Lettura Data</string>
     <string name="style_is_builtin">Predefinito</string>
     <string name="style_is_user_defined">Definito dall\'utente</string>
     <string name="system">(Sistema)</string>
@@ -710,4 +695,8 @@
     <string name="tip_import_isbn_list">Importa un file di testo con numeri ISBN. Il file dovrebbe avere un unico codice ISBN su ogni riga. I risultati verranno messi in coda.</string>
     <string name="lbl_date_added">Data di inserimento</string>
 
+    <string name="lbl_group_1st_char_author_family_name">1° carattere del cognome dell\'Autore</string>
+    <string name="lbl_group_1st_char_series_title">1° personaggio del titolo della serie</string>
+    <string name="lbl_group_1st_char_publisher_name">1° carattere del nome dell\'editore</string>
+    <string name="lbl_group_1st_char_book_title">1° carattere del titolo del libro</string>
 </resources>
